--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
 
     <button type="submit"
       class="w-full bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-700 transition">Submit</button>
-
-    <p id="responseMessage" class="text-center text-green-600 text-sm hidden">Campaign submitted successfully!</p>
   </form>
 
   <script>
     const form = document.getElementById('campaignForm');
-    const responseMessage = document.getElementById('responseMessage');
 
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
@@ -37,8 +34,7 @@
       });
 
       if (res.ok) {
-        responseMessage.classList.remove('hidden');
-        form.reset();
+        window.location.href = "thankyoupage.html";
       } else {
         alert("Something went wrong. Please try again.");
       }
