--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </form>
 
   <script>
-    const optionsUrl = 'http://localhost:5678/webhook/get-options';
-    const startCampaignUrl = 'http://localhost:5678/webhook/start-campaign';
+    const optionsUrl = 'https://n8n.innooverse.com/webhook/get-options';
+    const startCampaignUrl = 'https://n8n.innooverse.com/webhook/start-campaign';
 
     const listSelect = document.getElementById('listSelect');
     const templateSelect = document.getElementById('templateSelect');
